# magicqueue-py

./: .gitignore  LICENSE  README.md  bench.py  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_memory.py  batch_priority.py  graceful_shutdown.py  multiple_handlers.py  persistence.py  redis_example.py  retry_deadletter.py
src/magicqueue/: __init__.py  driver.py  errors.py  leveldb_store.py  logger.py  memory.py  payload.py  persistence.py  priority.py  queue.py  redis_driver.py
tests/: conftest.py  test_leveldb_store.py  test_memory.py  test_queue.py
